--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "sql-library-manager",
-  "version": "1.0.0",
-  "description": "sql library manager",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aabishafi/project-8.git"
-  },
-  "author": "mohamed adam",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/aabishafi/project-8/issues"
-  },
-  "homepage": "https://github.com/aabishafi/project-8#readme",
-  "devDependencies": {},
-  "dependencies": {
-    "express": "^4.17.1",
-    "pug": "^3.0.0",
-    "sequelize": "^6.3.4",
-    "sqlite3": "^5.0.0"
-  }
+    "name": "sql-library-manager",
+    "version": "1.0.0",
+    "description": "sql library manager",
+    "main": "index.js",
+    "scripts": {
+        "start": "node app.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/aabishafi/project-8.git"
+    },
+    "author": "mohamed adam",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/aabishafi/project-8/issues"
+    },
+    "homepage": "https://github.com/aabishafi/project-8#readme",
+    "devDependencies": {},
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "pug": "^3.0.0",
+        "sequelize": "^6.3.4",
+        "sequelize-cli": "^6.2.0",
+        "sqlite3": "^5.0.0"
+    }
 }
